docs: 重整理最终版需求文档(design.md v4.0,含交互优化+Undo/Redo)